# marg-orientation

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simulation.rs
examples/simulation_utils/: l3gd20_gyro.rs  lsm303dlhc_accel.rs  lsm303ldhc_magnetometer.rs  mod.rs  simulated_events.rs
math/: .gitignore  quaternion_jacobian.jl  quaternion_jacobian.m  triad.m
src/: accelerometer_noise.rs  accelerometer_reading.rs  dcm.rs  euler_angles.rs  gyro.rs  gyro_estimator.rs  gyro_free.rs  gyroscope_bias.rs  gyroscope_noise.rs  gyroscope_reading.rs  lib.rs  macros.rs  magnetometer_noise.rs  magnetometer_reading.rs  num_traits.rs  test_estimator.rs  types.rs  vector3.rs
src/dcm/: filter.rs  types.rs
src/gyro/: filter.rs
src/gyro_drift/: filter.rs  types.rs
src/gyro_free/: filter.rs  types.rs
src/test_estimator/: types.rs
src/types/: accelerometer_noise.rs  accelerometer_reading.rs  gyroscope_bias.rs  gyroscope_reading.rs  vector3.rs
