[package]
name = "marg-orientation"
description = "A MARG (Magnetic, Angular Rate, and Gravity) orientation estimator"
version = "0.1.0-alpha.2"
authors = ["Markus Mayer"]
homepage = "https://github.com/sunsided/marg-orientation"
repository = "https://github.com/sunsided/marg-orientation"
license = "EUPL-1.2"
keywords = ["kalman-filter", "embedded", "robotics", "imu", "estimation"]
categories = ["aerospace", "algorithms", "science::robotics", "no-std", "embedded"]
edition = "2021"

[features]
default = ["coordinate-frame"]
std = ["minikalman/std", "num-traits/std"]
unsafe = []
coordinate-frame = ["dep:coordinate-frame"]

[dependencies]
coordinate-frame = { version = "0.4.0", optional = true, features = ["num-traits", "nalgebra"] }
minikalman = { version = "0.6.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
uniform-array-derive = "0.1.0"

[dev-dependencies]
ensure-uniform-type = "0.1.1"
paste = "1.0.15"
minikalman = { version = "0.6.0", features = ["std"] }
csv = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
kiss3d = "0.35.0"

[[example]]
name = "simulation"
path = "examples/simulation.rs"
required-features = ["std", "coordinate-frame"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
